# vc

./: GEMINI.md  README.md
.github/workflows/: deploy-ai-profile.yml  deploy-serverless.yml
crypto_tax/: app.py
crypto_tax/src/: calculator.py  exporter.py  parser.py
crypto_tax/templates/: index.html
crypto_tax/tests/: conftest.py  test_app.py
products/ai_profile/: .gitignore  GEMINI.md  README.md  firebase.json  index.html  package-lock.json  package.json
products/ai_profile/src/: chat.js  profile-data.js
products/ai_profile/tests/: chat.test.js  profile-data.test.js
products/autopilot_dev/: GEMINI.md  README.md  pyproject.toml
products/autopilot_dev/autopilot_dev/: __init__.py  agents.py  cli.py  loop.py  plan.py  prompts.py  worklog.py
products/autopilot_dev/tests/: test_agents.py  test_cli.py  test_loop.py  test_plan.py  test_prompts.py  test_worklog.py
products/crypto_tax/: GEMINI.md  README.md
products/crypto_tax/tests/: test_calculator.py  test_exporter.py  test_parser.py
products/crypto_tax_mobile/: GEMINI.md
products/crypto_tax_mobile/design/: design_doc.md  implementation_plan.md
products/crypto_tax_serverless/: .firebaserc  GEMINI.md  README.md  firebase.json  index.html  package-lock.json  package.json
products/crypto_tax_serverless/coverage/: clover.xml  coverage-final.json  lcov.info
products/crypto_tax_serverless/coverage/lcov-report/: calculator.js.html  (+3 more)
products/crypto_tax_serverless/src/: calculator.js  exporter.js  parser.js
products/crypto_tax_serverless/tests/: calculator.test.js  exporter.test.js  parser.test.js
